--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "comelyio/comely-database": "*"
+    "comelyio/database": "*"
   },
   "autoload": {
     "psr-4": {
